--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>Meme Registry</title>
   </head>
@@ -19,7 +16,7 @@
   ">
     <div class="container">
       <div class="row">
-        <div class="col-4">
+        <div class="col-4" style="margin: 0 auto;">
           <h1>Meme Registry</h1>
 
           <div id="notification" class="alert alert-secondary" role="alert">
@@ -32,23 +29,23 @@
             <img id="meme" src="" class="figure-img img-fluid rounded">
             <figcaption class="figure-caption">
               <!-- Display name of meme creator here -->
-              <h5 id="MemeCreatorName"> </h5>
+              <h5 id="MemeCreatorName"></h5>
               <!-- Display time of meme registration here -->
               <p id="timeproof"></p>
             </figcaption>
           </figure>
 
-         <!-- Loader gif to indicate that something is happening when we interact with blockchain -->
+          <!-- Loader gif to indicate that something is happening when we make call or insert to blockchain -->
           <br>
-          <img id="loader" style="width:100px; display:none;"
-          src="https://i.giphy.com/media/QLxKXLRTwSDY7NuVfG/giphy.webp">
+          <img id="loader" style="width:100px; display:none;" src="https://i.giphy.com/media/QLxKXLRTwSDY7NuVfG/giphy.webp">
+
 
           <!-- Input fields to register meme  -->
+
           <!-- Input of meme image url to register-->
           <div class="form-group">
             <label for="url">Url</label>
-            <input type="text" class="form-control" id="url"
-            placeholder="Enter the url of a meme to register">
+            <input type="text" class="form-control" id="url" placeholder="Enter the url of a meme to register">
           </div>
 
           <!-- Input of user name to register-->
@@ -63,158 +60,182 @@
           <!-- Input field to get a meme from blockchain  -->
           <div class="form-group">
             <label for="geturl">Get url</label>
-            <input type="text" class="form-control" id="geturl"
-            placeholder="Enter url of meme you want to check">
+            <input type="text" class="form-control" id="geturl" placeholder="Enter url of meme you want to check">
           </div>
 
           <button id="GetButton" class="btn btn-primary">Get meme by url</button>
+
 
         </div>
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
-  <script>
+    <script>
 
-        if (typeof web3 !== 'undefined') {
-          web3 = new Web3(web3.currentProvider);
-        } else {
-          // set the provider you want from Web3.providers
-          web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
-        }
+      window.addEventListener('load', async () => {
+          // Modern dapp browsers...
+          if (window.ethereum) {
+              window.web3 = new Web3(ethereum);
+              try {
+                  // Request account access if needed
+                  await ethereum.enable();
+                  // Acccounts now exposed
+                  web3.eth.defaultAccount = web3.eth.accounts[0];
+                  console.log(web3.eth.defaultAccount);
+              } catch (error) {
+                  // User denied account access...
+              }
+          }
+          // Legacy dapp browsers...
+          else if (window.web3) {
+              window.web3 = new Web3(web3.currentProvider);
+              // Acccounts always exposed
+          }
+          // Non-dapp browsers...
+          else {
+              console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
+          }
+      });
 
-        web3.eth.defaultAccount = web3.eth.accounts[0];
+      var contract = web3.eth.contract([
+      	{
+      		"constant": false,
+      		"inputs": [
+      			{
+      				"name": "_url",
+      				"type": "string"
+      			},
+      			{
+      				"name": "_name",
+      				"type": "string"
+      			}
+      		],
+      		"name": "setMemecert",
+      		"outputs": [],
+      		"payable": false,
+      		"stateMutability": "nonpayable",
+      		"type": "function"
+      	},
+      	{
+      		"constant": true,
+      		"inputs": [
+      			{
+      				"name": "_url",
+      				"type": "string"
+      			}
+      		],
+      		"name": "getMemecert",
+      		"outputs": [
+      			{
+      				"name": "",
+      				"type": "string"
+      			},
+      			{
+      				"name": "",
+      				"type": "uint256"
+      			}
+      		],
+      		"payable": false,
+      		"stateMutability": "view",
+      		"type": "function"
+      	},
+      	{
+      		"anonymous": false,
+      		"inputs": [
+      			{
+      				"indexed": false,
+      				"name": "name",
+      				"type": "string"
+      			},
+      			{
+      				"indexed": false,
+      				"name": "timestamp",
+      				"type": "uint256"
+      			},
+      			{
+      				"indexed": false,
+      				"name": "url",
+      				"type": "string"
+      			}
+      		],
+      		"name": "memecertInfo",
+      		"type": "event"
+      	}
+      ]);
 
-        console.log(web3.eth.defaultAccount);
+      var contractAtAddress = contract.at('0xb22d55eda07bb707a229da68941dbb6bc3cf8375');
+      console.log(contractAtAddress);
 
-        var contract = web3.eth.contract([ { "anonymous": false,
-          "inputs": [ { "indexed": false, "name": "creator", "type": "address" },
-          { "indexed": false, "name": "name", "type": "string" },
-          { "indexed": false, "name": "timestamp", "type": "uint256" },
-          { "indexed": false, "name": "url", "type": "string" } ],
-          "name": "memecertInfo", "type": "event" },
-          { "constant": false, "inputs": [ { "name": "_url", "type": "string" },
-          { "name": "_creator", "type": "address" }, { "name": "_name", "type": "string" } ],
-          "name": "setMemecert", "outputs": [], "payable": false,
-          "stateMutability": "nonpayable", "type": "function" },
-          { "constant": true, "inputs": [ { "name": "_url", "type": "string" } ],
-          "name": "getMemecert", "outputs": [ { "name": "", "type": "address" },
-          { "name": "", "type": "string" }, { "name": "", "type": "uint256" } ],
-          "payable": false, "stateMutability": "view", "type": "function" } ]);
-
-        var contractAtAddress = contract.at('0x079eb38840ebc60eeb3febd58ace03522cd6ffe0');
-
-        console.log(contractAtAddress);
-
-    //This part is for the registration on the blockchain
-    $("#RegisterButton").click(function() {
-
-      //Check if there is actually an input
-      if (($("#url").val() == '') || ($("#name").val() == '')) {
-            $("#notification").attr("class","alert alert-danger");
-            $("#notification").html('Please enter URL and Name to register');
-
-      } else {
+      //This part is for the registration on the blockchain
+      $("#RegisterButton").click(function() {
         // display loading gif
         $("#loader").show();
 
-        //First check if the url meme is already registered on the blockchain with a call,
-        //to avoid an error on blockchain and save time
-        contractAtAddress.getMemecert($("#url").val(), (err, res) => {
-          if (res[1]) {
-            $("#loader").hide();
-            $("#notification").attr("class","alert alert-danger");
-            $("#notification").html('Meme already registered');
-            $("#MemeCreatorName").html('by '+res[1]);
-            $("#timeproof").html('registered on '+ new Date((res[2]['c'][0])*1000));
-            $("#meme").attr("src",$("#geturl").val());
-
-          } else {
-            //If there is no result on the blockchain, execute script to save it to the blockchain
-            contractAtAddress.setMemecert($("#url").val(), web3.eth.defaultAccount,
-            $("#name").val(), (err, res) => {
-              if (err) {
-                $("#loader").hide();
-                $("#notification").attr("class","alert alert-danger");
-                $("#notification").html('An error occurred');
-              }
-            });
-          }
+        contractAtAddress.setMemecert($("#url").val(), $("#name").val(), (err, res) => {
+           if (err) {
+               $("#loader").hide();
+           }
         });
-      }
+      });
 
-    });
+      //watch for changes on event
+      var Event = contractAtAddress.memecertInfo({}, 'latest');
+      Event.watch(function(error, result) {
+        //If you get a result hide loader, display result and notification
+        console.log(result);
+        if (result) {
+          $("#loader").hide();
+          $("#MemeCreatorName").html('by '+(result.args.name));
+          $("#timeproof").html('registered on '+ new Date((result.args.timestamp['c'][0])*1000));
+          $("#meme").attr("src", (result.args.url));
+          $("#notification").attr("class","alert alert-success");
+          $("#notification").html('Your meme is now registered');
 
-    //watch for changes on event
-    var Event = contractAtAddress.memecertInfo({}, 'latest');
-    Event.watch(function(error, result) {
-            //If you get a result hide loader, display result and notification
-            if (result) {
-                $("#loader").hide();
-                $("#MemeCreatorName").html('by '+(result.args.name));
-                $("#timeproof").html('registered on '+ new Date((result.args.timestamp['c'][0])*1000));
-                $("#meme").attr("src", (result.args.url));
-                $("#notification").attr("class","alert alert-success");
-                $("#notification").html('Your meme is now registered');
-
-            } else {
-                $("#loader").hide();
-                $("#meme").attr("src", (""));
-                $("#notification").attr("class","alert alert-danger");
-                $("#notification").html('Your meme was not successful registered');
-
-            }
-        });
-
-    //This part is for the call to the blockchain
-    $("#GetButton").click(function() {
-
-      //First check again if we have an input in the get form
-      if ($("#geturl").val() == '') {
+        } else {
+          $("#loader").hide();
+          $("#meme").attr("src", (""));
           $("#notification").attr("class","alert alert-danger");
-          $("#notification").html('Please enter a URL to check');
+          $("#notification").html('Your meme was not sucessfull registered');
 
-      } else {
-        $("#loader").show();
+        }
+      });
 
-        contractAtAddress.getMemecert($("#geturl").val(), (err, res) => {
-          console.log(res)
-          if (res[1]) {
-            $("#MemeCreatorName").html('by '+res[1]);
-            $("#timeproof").html('registered on '+ new Date((res[2]['c'][0])*1000));
-            $("#loader").hide();
-            $("#meme").attr("src",$("#geturl").val());
-            $("#notification").attr("class","alert alert-success");
-            $("#notification").html('Meme was registered');
+      //This part is for the call to the blockchain
+  		$("#GetButton").click(function() {
 
-          } else {
-            $("#loader").hide();
-            $("#meme").attr("src", (""));
-            $("#MemeCreatorName").html("");
-            $("#timeproof").html("");
+  			$("#loader").show();
 
-            $("#notification").attr("class","alert alert-secondary");
-            $("#notification").html('Meme not yet registered');
-          }
+  			contractAtAddress.getMemecert($("#geturl").val(), (err, res) => {
+  				if (res[1]) {
+  					$("#loader").hide();
+  					$("#MemeCreatorName").html('by '+res[0]);
+  					$("#timeproof").html('registered on '+ new Date((res[1]['c'][0])*1000));
+  					$("#meme").attr("src",$("#geturl").val());
+  					$("#notification").attr("class","alert alert-success");
+  					$("#notification").html('Meme was registered');
 
-        });
-      }
+  				} else {
+  					$("#loader").hide();
+  					$("#meme").attr("src", (""));
+  					$("#MemeCreatorName").html("");
+  					$("#timeproof").html("");
 
-    });
+  					$("#notification").attr("class","alert alert-secondary");
+  					$("#notification").html('Meme not yet registered');
+  				}
+  			});
+  		});
 
- </script>
+    </script>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-  crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-  crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-  crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
+
+
+
